DeveloperOrg/force-app/main/default/objects/Student__c/fields/Belonging_Department__c.field-meta.xml
<CustomField>
    <fullName>Belonging_Department__c</fullName>
    <label>Belonging Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>