DeveloperOrg/force-app/main/default/objects/Student__c/fields/Department_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Department_Created_Date__c</fullName>
    <formula>Belonging_Department__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Created Date</label>
    <type>Date</type>
</CustomField>