DeveloperOrg/force-app/main/default/objects/Student__c/fields/DOB_of_Student__c.field-meta.xml
<CustomField>
    <fullName>DOB_of_Student__c</fullName>
    <label>DOB of Student</label>
    <required>true</required>
    <type>Date</type>
</CustomField>