DeveloperOrg/force-app/main/default/objects/Student__c/fields/Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fees_Paid__c</fullName>
    <label>Fees Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fees_Paid</valueSetName>
    </valueSet>
</CustomField>