DeveloperOrg/force-app/main/default/objects/Student__c/fields/hobbies__c.field-meta.xml
<CustomField>
    <fullName>hobbies__c</fullName>
    <label>hobbies</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Student_Hobbies__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Volleyball</fullName>
            </value>
            <value>
                <fullName>Marathon running</fullName>
            </value>
            <value>
                <fullName>Skiing</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Swimming</fullName>
            </value>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Mountain climbing</fullName>
            </value>
            <value>
                <fullName>Chess</fullName>
            </value>
            <value>
                <fullName>Playing a musical instrument</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Writing</fullName>
            </value>
            <value>
                <fullName>Sketching</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Blog writing</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Boardgames</fullName>
            </value>
            <value>
                <fullName>Creating and organizing a book club</fullName>
            </value>
            <value>
                <fullName>Networking events</fullName>
            </value>
            <value>
                <fullName>Local meetups</fullName>
            </value>
            <value>
                <fullName>Volunteering at a charity center</fullName>
            </value>
            <value>
                <fullName>Public speaking</fullName>
            </value>
            <value>
                <fullName>Exploring other cultures</fullName>
            </value>
            <value>
                <fullName>Dancing</fullName>
            </value>
            <value>
                <fullName>Camping</fullName>
            </value>
            <value>
                <fullName>Language classes</fullName>
            </value>
            <value>
                <fullName>Archery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>