DeveloperOrg/force-app/main/default/objects/Student__c/fields/Student_count__c.field-meta.xml
<CustomField>
    <fullName>Student_count__c</fullName>
    <label>Student count</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>