DeveloperOrg/force-app/main/default/objects/Student__c/fields/Student_Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Student_Hobbies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student hobbies</label>
    <type>Checkbox</type>
</CustomField>