DeveloperOrg/force-app/main/default/objects/Student__c/recordTypes/STudent.recordType-meta.xml
<RecordType>
    <fullName>STudent</fullName>
    <active>true</active>
    <label>STudent</label>
</RecordType>