DeveloperOrg/force-app/main/default/objects/Student__c/validationRules/Fees_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fees_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Fees_Paid__c , &quot;No&quot;)</errorConditionFormula>
    <errorDisplayField>Fees_Paid__c</errorDisplayField>
    <errorMessage>first pay the Fees</errorMessage>
</ValidationRule>